<resources>
    <string name="app_name">Magic Drafter</string>
    <string name="color">Color</string>
    <string name="cost">Cost</string>
    <string name="type">Type</string>
    <string name="deck_numbers">0/40</string>
    <string name="add_basic_lands">Add Basic Lands</string>
    <string name="too_many_lands">You\'re trying to add too many lands! Please keep total lands at 35 or less.</string>
    <string name="pack_0">Pack 0</string>
    <string name="draft_numbers">0/45</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Sealed Simulator</string>
    <string name="title_section3">Draft Simulator</string>
    <string name="title_section4">My Decks</string>
    <string name="title_section5">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="deck_name">Deck Name</string>
    <string name="deck_number">Deck Number</string>
    <string name="save">Save</string>
    <string name="exitingSim">Exiting Simulator...</string>
    <string name="simWarning">You will lose any current simulation data if you continue. Are you sure you want to go to the main menu?</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string-array name="numberof_ais">
        <item>1 AI</item>
        <item>2 AI</item>
        <item>3 AI</item>
        <item>4 AI</item>
        <item>5 AI</item>
        <item>6 AI</item>
        <item>7 AI</item>
        <item>8 AI</item>
    </string-array>
    <string-array name="numberof_ais_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="welcome_message">Welcome to Magic Drafter! Slide out the menu from the left to
        begin! Make a deck via the sealed or draft simulators and save them for later viewing. To
        check on previous decks, go to the My Decks screen. If you\'re looking to change the number
        of AIs, go to the Settings screen. Happy drafting!    NONE of the cards were created by the
    makers of this app, and this app has NO connection to Wizards of the Coast. Please support the
    actual card game if you use this app.</string>
</resources>
